# http-client

./: Cargo.toml  readme.md
examples/: get.rs
src/: azure.rs  error.rs  lib.rs  method.rs  methods.rs  request.rs  response.rs  send_request.rs
src/azure/: cosmos.rs  mod.rs  shared_access_signature.rs  shared_key.rs
